# sonr

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/sonr-cli/: Cargo.toml
crates/sonr-cli/src/: main.rs
crates/sonr-daemon/: Cargo.toml
crates/sonr-daemon/src/: main.rs
