[workspace]
members = [
    "crates/sonr-daemon",
    "crates/sonr-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive", "env"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
axum = "0.7.9"
rmcp = { version = "0.12.0", features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
schemars = "1.1.0"
memvdb = "0.1.1"
md5 = "0.7.0"
ignore = "0.4.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libc = "0.2.169"
directories = "6.0.0"
