[package]
name = "sonr"
version = "0.1.6"
edition = "2024"
readme = "../../README.md"
description = "High-performance semantic search tool for local codebases"
license = "MIT"
repository = "https://github.com/skyne98/sonr"
homepage = "https://github.com/skyne98/sonr"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
