[package]
name = "sonr-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
memvdb = { workspace = true }
md5 = { workspace = true }
ignore = { workspace = true }
libc = { workspace = true }
directories = { workspace = true }
