[package]
name = "sonr-daemon"
version = "0.1.3"
edition = "2024"
readme = "../../README.md"
description = "Background daemon for sonr, providing semantic search capabilities using local LLMs"
license = "MIT"
repository = "https://github.com/skyne98/sonr"
homepage = "https://github.com/skyne98/sonr"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
memvdb = { workspace = true }
md5 = { workspace = true }
ignore = { workspace = true }
libc = { workspace = true }
directories = { workspace = true }
